Devtools: Fix tooltip z-index and add tooltip for dock side
Fix z-index of tooltips to appear on top of glass panes such as the new main menu. This also adds a tooltip for toggle dock side tooltip.

BUG=520272,521206

Review URL: https://codereview.chromium.org/1294033002

git-svn-id: svn://svn.chromium.org/blink/trunk@200698 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/ui/tooltip.css
+++ b/front_end/ui/tooltip.css
@@ -23,7 +23,7 @@
     position: absolute;
     visibility: hidden;
     transition: visibility 0s 100ms, opacity 150ms cubic-bezier(0, 0, .2, 1);
-    z-index: 3000;
+    z-index: 20001;
     top: 0;
     left: 0;
     opacity: 0;
